# python-projects

./: .gitignore  README.md
01-quiz-game/: 01-quiz.py  cinemaquestions.py  geopoliticsquestions.py  main.py  musicandartquestions.py  pyproject.toml  techquestions.py
02-number-guesser/: main.py  pyproject.toml
03-password-manager/: functions.py  main.py
