[project]
name = "02-number-guesser"
version = "0.1.0"
description = "guess the number game"
authors = [
    {name = "Ludwig S",email = "silvaludwig@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
